Bug 23014: Quirks mode percentage height: enable for iframes, enable for native scrollbars, and add safety check for unconstrained height. r=harishd